--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
   cursor: pointer;
 }
 
+.navbar {
+  background: #fff;
+}
+
 .helpOption {
   font-size: 15px;
   padding: 10px 15px;
@@ -14,6 +18,25 @@
 .helpOption:hover {
   background-color: #286090;
 }
+
+.sizesHeading {
+  font-size: 20px;
+  margin: 5px 0 -5px -7px;
+}
+
+.helpInfo {
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.helpInfo h2 {
+  font-size: 25px;
+}
+
+.lead {
+  font-weight: 300 !important;
+}
+
 
 
 
@@ -220,7 +243,7 @@ body {
 
 .docs-cropped .modal-body > img,
 .docs-cropped .modal-body > canvas {
-  max-width: 200%;
+  max-width: 100%;
 }
 
 /* Footer */
