--- a/css/main.css
+++ b/css/main.css
@@ -151,13 +151,13 @@ body {
 
 .uploadInstructions {
   width:85%;
-  margin: 0 10px;
+  margin: 10px 10px;
   font-weight: 300;
 }
 
 /* Export */
 
-.exportInstructions {
+.exportInstructions, .cropperInstructions {
   font-weight: 300;
 }
 
@@ -325,7 +325,6 @@ img {
 }
 
 .credit{
-  position: relative;
   display: block;
   width: 100%;
   height: 30px;
@@ -337,14 +336,21 @@ img {
   text-align: center;
 }
 
-.credit:before {
-  position: absolute;
-  top: 25%;
-  right: 0;
-  left: 0;
-  display: block;
-  height: 0;
-  padding-top: 13px;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+.credit {
+  position: relative;
+  z-index: 1;
 }
+.credit:before {
+  border-top: 1px solid #eee;
+  content:" ";
+  margin: 0 auto;
+  position: absolute; 
+  top: 50%; left: 0; right: 0; bottom: 0;
+  width: 100%;
+  z-index: -1;
+  }
+
+.credit cite { 
+  background: #fff; 
+  padding: 0 10px; 
+  }
