--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,84 +1,82 @@
 .navbar-brand, .helpOption {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .navbar {
-  background: #fff;
+    background: #fff;
 }
 
 .helpOption {
-  font-size: 15px;
-  padding: 10px 15px;
-  background-color: #0074d9;
-  border-radius: 4px;
-  color: #fff;
-  margin-left: 96px;
+    font-size: 15px;
+    padding: 10px 15px;
+    background-color: #0074d9;
+    border-radius: 4px;
+    color: #fff;
+    margin-left: 96px;
 }
 
 .helpOption:hover {
-  background-color: #286090;
+    background-color: #286090;
 }
 
 .sizesHeading {
-  font-size: 20px;
-  margin: 5px 0 -5px -7px;
+    font-size: 20px;
+    margin: 5px 0 -5px -7px;
 }
 
 .helpInfo {
-  font-size: 15px;
-  font-weight: 300;
+    font-size: 15px;
+    font-weight: 300;
 }
 
 .helpInfo h2 {
-  font-size: 25px;
+    font-size: 25px;
 }
 
 .lead {
-  font-weight: 400;
+    font-weight: 400;
 }
 
 
 /* Size Options */
 
 .sizes {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .sizeUse {
-  font-weight: 400;
+    font-weight: 400;
 }
 
 .sizeHeading {
-  padding: 10px 0;
-  width: 100%;
+    padding: 10px 0;
+    width: 100%;
 }
 
 .sizeHeading h3 {
-  width:185px;
-  padding-right:40px;
-  padding: 10px 0;
+    width:185px;
+    padding-right:40px;
+    padding: 10px 0;
 }
 
-.sizeOptions {
-  padding: 5px 5px;
-  background: #ccc;
+.sizeOptions, .brandingOptions {
+    padding: 5px 5px;
+    background: #ccc;
+    &:hover {
+        background: #adadad;
+    }
+    &:nth-of-type(2n) {
+        background: #eee;
+    }
+    &:nth-of-type(2n):hover {
+        background: #ddd;
+    }
 }
 
-.sizeOptions:hover {
-  background: #adadad;
-}
-
-.sizeOptions:nth-of-type(2n) {
-  background: #eee;
-}
-
-.sizeOptions:nth-of-type(2n):hover {
-  background: #ddd;
-}
 
 .checkbox {
-  font-weight: 300 !important;
-  margin-left:20px;
+    font-weight: 300 !important;
+    margin-left:20px;
 }
 
 
@@ -86,44 +84,44 @@
 /* Basic */
 
 body {
-  margin: 0;
-  overflow-x: hidden;
+    margin: 0;
+    overflow-x: hidden;
 }
 
 .browserupgrade {
-  margin: 0;
-  padding: .5em 1em;
-  background-color: #fcfcfc;
-  text-align: center;
+    margin: 0;
+    padding: .5em 1em;
+    background-color: #fcfcfc;
+    text-align: center;
 }
 
 
 /* Header */
 
 .docs-header {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .navbar-toggle:hover,
 .navbar-toggle:focus {
-  border-color: #0074d9;
+    border-color: #0074d9;
 }
 
 .navbar-toggle .icon-bar {
-  background-color: #0074d9;
+    background-color: #0074d9;
 }
 
 
 /* Jumbotron */
 
 .docs-jumbotron {
-  background-color: #0074d9;
-  color: #fff;
+    background-color: #0074d9;
+    color: #fff;
 }
 
 .logo {
-  width:300px;
-  height:127px;
+    width:300px;
+    height:127px;
 }
 
 /* Content */
@@ -131,236 +129,236 @@ body {
 /* Sizes */
 
 .sizeInstructions {
-  font-weight: 300;
+    font-weight: 300;
 }
 
 /* Upload */
 
 .uploadArea {
-  padding: 10px;
-  background: #ccc;
-  display: flex;
-  flex-wrap: wrap;
+    padding: 10px;
+    background: #ccc;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .uploadBtn {
-  margin-right: 10px;
-  height: 35px;
-  margin-top: 3px;
+    margin-right: 10px;
+    height: 35px;
+    margin-top: 3px;
 } 
 
 .uploadInstructions {
-  width:85%;
-  margin: 0 10px;
-  font-weight: 300;
+    width:85%;
+    margin: 0 10px;
+    font-weight: 300;
 }
 
 /* Export */
 
 .exportInstructions {
-  font-weight: 300;
+    font-weight: 300;
 }
 
 /* Cropping Area */
 
 img {
-  max-width:100%;
+    max-width:100%;
 }
 
 .img-container {
-  max-width:720px;
+    max-width:720px;
 }
 
 .cropperImg {
-  width: 47% !important;
+    width: 47% !important;
 }
 
 .img-container,
 .img-preview, .dynamic-preview {
-  background-color: #f7f7f7;
-  text-align: center;
+    background-color: #f7f7f7;
+    text-align: center;
 }
 
 .img-container {
-  min-height: 200px;
-  max-height: 516px;
-  margin-bottom: 20px;
-  margin-right: 10px;
+    min-height: 200px;
+    max-height: 516px;
+    margin-bottom: 20px;
+    margin-right: 10px;
 }
 
 @media (max-width: 768px) {
-  .uploadBtn {
-    margin-top: 20px;
-  }
-  .uploadInstructions{
-    width: 70%;
-  }
+    .uploadBtn {
+        margin-top: 20px;
+    }
+    .uploadInstructions{
+        width: 70%;
+    }
 }
 
 @media (min-width: 768px) {
-  .img-container {
-    min-height: 516px;
-  }
+    .img-container {
+        min-height: 516px;
+    }
 }
 
 .img-container > img {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 .docs-preview {
-  margin-right: -15px;
+    margin-right: -15px;
 }
 
 .img-preview, .dynamic-preview {
-  margin-right: 10px;
-  margin-bottom: 10px;
-  overflow: hidden;
-  display:block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    display:block;
 }
 
 .img-preview > img, .dynamic-preview > img {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 .preview-lg {
-  width: 400px;
-  height: 224px;
+    width: 400px;
+    height: 224px;
 }
 
 .docs-data > .input-group {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .docs-data > .input-group > label {
-  min-width: 80px;
+    min-width: 80px;
 }
 
 .docs-data > .input-group > span {
-  min-width: 50px;
+    min-width: 50px;
 }
 
 .docs-buttons > .btn,
 .docs-buttons > .btn-group,
 .docs-buttons > .form-control {
-  margin-right: 5px;
-  margin-bottom: 10px;
+    margin-right: 5px;
+    margin-bottom: 10px;
 }
 
 .docs-toggles > .btn,
 .docs-toggles > .btn-group,
 .docs-toggles > .dropdown {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .docs-tooltip {
-  display: block;
-  margin: -6px -12px;
-  padding: 6px 12px;
+    display: block;
+    margin: -6px -12px;
+    padding: 6px 12px;
 }
 
 .docs-tooltip > .icon {
-  margin: 0 -3px;
-  vertical-align: top;
+    margin: 0 -3px;
+    vertical-align: top;
 }
 
 .tooltip-inner {
-  white-space: normal;
+    white-space: normal;
 }
 
 .btn-upload .tooltip-inner {
-  white-space: nowrap;
+    white-space: nowrap;
 }
 
 @media (max-width: 400px) {
-  .btn-group-crop {
-    margin-right: -15px!important;
-  }
+    .btn-group-crop {
+        margin-right: -15px!important;
+    }
 
-  .btn-group-crop > .btn {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
+    .btn-group-crop > .btn {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 
-  .btn-group-crop .docs-tooltip {
-    margin-left: -5px;
-    margin-right: -5px;
-    padding-left: 5px;
-    padding-right: 5px;
-  }
+    .btn-group-crop .docs-tooltip {
+        margin-left: -5px;
+        margin-right: -5px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 .docs-options .dropdown-menu {
-  width: 100%;
+    width: 100%;
 }
 
 .docs-options .dropdown-menu > li {
-  padding: 3px 20px;
+    padding: 3px 20px;
 }
 
 .docs-options .dropdown-menu > li:hover {
-  background-color: #f7f7f7;
+    background-color: #f7f7f7;
 }
 
 .docs-options .dropdown-menu > li > label {
-  display: block;
+    display: block;
 }
 
 .docs-cropped .modal-body {
-  text-align: center;
+    text-align: center;
 }
 
 .docs-cropped .help-body{
-  text-align: left;
+    text-align: left;
 }
 
 .docs-cropped .modal-body > img,
 .docs-cropped .modal-body > canvas {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 /* Footer */
 
 .docs-footer {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .credit{
-  display: block;
-  width: 100%;
-  height: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #ddd;
-  font-size: 10px;
-  line-height: 30px;
-  text-align: center;
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #ddd;
+    font-size: 10px;
+    line-height: 30px;
+    text-align: center;
 }
 
 .credit {
-  position: relative;
-  z-index: 1;
+    position: relative;
+    z-index: 1;
 }
 .credit:before {
-  border-top: 1px solid #eee;
-  content:" ";
-  margin: 0 auto;
-  position: absolute; 
-  top: 50%; left: 0; right: 0; bottom: 0;
-  width: 100%;
-  z-index: -1;
+    border-top: 1px solid #eee;
+    content:" ";
+    margin: 0 auto;
+    position: absolute; 
+    top: 50%; left: 0; right: 0; bottom: 0;
+    width: 100%;
+    z-index: -1;
 }
 
 .credit cite { 
-  background: #fff; 
-  padding: 0 10px; 
+    background: #fff; 
+    padding: 0 10px; 
 }
 
 /* branding preview */
 .preview {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 .preview > .branding-preview {
-  position: absolute;
-  z-index: 1;
+    position: absolute;
+    z-index: 1;
 }
