adding message for no sizes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -362,3 +362,11 @@ img {
     position: absolute;
     z-index: 1;
 }
+
+.modal-body {
+    pre {
+        width: 50%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+}
