--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6973,4 +6973,9 @@ img {
   position: absolute;
   z-index: 1; }
 
+.modal-body pre {
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 10px; }
+
 /*# sourceMappingURL=style.css.map*/
