--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,7 @@
 @import "partials/cropper";
 @import "partials/options";
 @import "partials/modals";
+@import "partials/tabs";
 
 .navbar {
     background: #fff;
